tests/snapshots/cfg_snapshots__text_java_Res.snap
---
source: tests/cfg_snapshots.rs
expression: text
---
fn Res.run
  entry []
  exit []
  b2 [3:java.io.Reader r = open() | 3:java.io.Reader q = open() | 4:r.read(); | 3:q.close() | 3:r.close()]
  b3 [8:Runnable job = () -> { if (xs.isEmpty()) { return; } work(); }; | 9:xs.forEach(x -> use(x));]
  b4 [5:catch (java.io.IOException e) { | 6:log(e);]
  b5 [3:q.close() | 3:r.close()]
  0 -normal-> 2
  2 -normal-> 3
  2 -exception-> 5
  3 -normal-> 1
  4 -normal-> 3
  5 -exception-> 4
fn Res.run.job
  entry []
  exit []
  b2 [8:xs.isEmpty()]
  b3 [8:work();]
  b4 [8:return;]
  0 -normal-> 2
  2 -false-> 3
  2 -true-> 4
  3 -normal-> 1
  4 -return-> 1
fn Res.run.<lambda>
  entry []
  exit []
  b2 [9:use(x) | 9:<return>]
  0 -normal-> 2
  2 -normal-> 1
